<resources>
    <string name="app_name">Family Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="serverHost">Server Host:</string>
    <string name="serverPort">Server Port:</string>
    <string name="username">User Name:</string>
    <string name="password">Password:</string>
    <string name="firstname">First Name:</string>
    <string name="lastname">Last Name:</string>
    <string name="emailAddress">Email:</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="loginButton">SIGN IN</string>
    <string name="registerButton">REGISTER</string>
    <string name="searchIcon">Search</string>

    <string name="settingIcon">Settings</string>
    <string name="logoutButton">logoutButton</string>


    <string name="lifeStoryLines">lifeStoryLines</string>
    <string name="lifeStoryTitle">Life Story Lines</string>
    <string name="lifeStorySummary">Show life story lines</string>
    <string name="familyTreeLines">familyTreeLines</string>
    <string name="familyTreeTitle">Family Tree Lines</string>
    <string name="familyTreeSummary">Show family tree lines</string>
    <string name="spouseLines">spouseLines</string>
    <string name="spouseTitle">Spouse Lines</string>
    <string name="spouseSummary">Show spouse lines</string>
    <string name="filterFatherSide">filterFatherSide</string>
    <string name="fatherSideTitle">Father\'s Side</string>
    <string name="fatherSideSummary">Filter by father\'s side of family</string>
    <string name="filterMotherSide">filterMotherSide</string>
    <string name="motherSideTitle">Mother\'s Side</string>
    <string name="motherSideSummary">Filter by mother\'s side of family</string>
    <string name="maleEvents">maleEvents</string>
    <string name="maleEventsTitle">Male Events</string>
    <string name="genderSummary">Filter events based on gender</string>
    <string name="femaleEvents">femaleEvents</string>
    <string name="femaleEventsTitle">Female Events</string>

    <string name="title_activity_settings">Settings</string>

    <string name="fa_android">{fa-android}</string>
    <string name="fa_female">{fa-female}</string>
    <string name="fa_male">{fa-male}</string>
    <string name="fa_marker">{fa-map-marker}</string>

    <string name="initial_map_text">Click on a marker to see event details</string>

    <string name="person_title">Person Details</string>
    <string name="event_title">Event Map</string>
    <string name="search_title">Search</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender_noColon">Gender</string>
    <string name="eventsTitle">LIFE EVENTS</string>
    <string name="familyTitle">FAMILY</string>


</resources>